# gf2bv

./: .gitignore  MANIFEST.in  PKGBUILD  README.md  pyproject.toml  setup.py
examples/: lfsr.py  mt.py  nlfsr.py  nlfsr_ex.py  sage_mt.py  simple.py  xoshiro.py
gf2bv/: __init__.py  _inernal.h  _internal.c  _internal.h  _internal.pyi  pym4ri.c
gf2bv/crypto/: lfsr.py  mt.py  xoshiro.py
