[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gf2bv"
version = "0.1.0"
description = "Solving linear systems over GF(2) by manipulating bitvectors"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
no_warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "sage.*",
]
ignore_missing_imports = true
